Import of GREGFAST/Archive-SelfExtract-1.2 from CPAN.
gitpan-cpan-distribution: Archive-SelfExtract
gitpan-cpan-version:      1.2
gitpan-cpan-path:         GREGFAST/Archive-SelfExtract-1.2.tar.gz
gitpan-cpan-author:       GREGFAST
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 Changelog for Archive::SelfExtract
 
+* v1.2 - Fri May 07 2004
+
+ - Wrong module name in bin/mkselfextract.  Author feels dumb.
+
 * v1.1 - Fri May 07 2004
 
  - DATA filehandle should be opened with binmode().  This fixes a
