--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,10 @@
 Changelog for Archive::SelfExtract
 
+* v1.3 - Fri May 14 2004
+
+ - Added options to mkselfextract.
+ - Fixed line termination/binmode issue for Win32.
+
 * v1.2 - Fri May 07 2004
 
  - Wrong module name in bin/mkselfextract.  Author feels dumb.
